--- a/apps/mixcore-portal/src/index.html
+++ b/apps/mixcore-portal/src/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <title>MixcorePortal</title>
+    <title>Site</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <mixcore-root></mixcore-root>
-  </body>
+    <script src="https://kit.fontawesome.com/9d94de9915.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/micon/css/micon.min.css">
+</head>
+
+<body>
+    <mix-root></mix-root>
+</body>
+
 </html>
