--- a/apps/mixcore-portal/src/index.html
+++ b/apps/mixcore-portal/src/index.html
@@ -9,9 +9,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script src="https://kit.fontawesome.com/9d94de9915.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/micon/css/micon.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
     <mix-root></mix-root>
 </body>
 
