--- a/apps/mix-portal/src/index.html
+++ b/apps/mix-portal/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Mixcore CMS</title>
+    <title>Mixcore - Universal Studio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
