--- a/apps/mix-portal/src/index.html
+++ b/apps/mix-portal/src/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     <mix-spa-root></mix-spa-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
