--- a/apps/mix-portal/src/index.html
+++ b/apps/mix-portal/src/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Mixcore - Universal Studio</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap-grid.min.css" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
-  </head>
-  <body>
-    <mix-spa-root></mix-spa-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Universal Studio</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap-grid.min.css" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <meta name="theme-color" content="#111" />
+</head>
+
+<body>
+  <mix-spa-root></mix-spa-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
+
 </html>
