feat(): update kanban

--- a/libs/mix-share/src/modules/task-manage/task-manage.layout.html
+++ b/libs/mix-share/src/modules/task-manage/task-manage.layout.html
@@ -2,7 +2,7 @@
 
 <ng-template #projectTroller>
   <tui-breadcrumbs>
-    <a *tuiItem tuiLink> {{ 'Project(s)' }} </a>
+    <a *tuiItem tuiLink> {{ 'Project' }} </a>
     <a *tuiItem tuiLink>
       <mix-project-select
         [size]="'s'"
