--- a/libs/mix-share/src/modules/task-manage/task-manage.layout.html
+++ b/libs/mix-share/src/modules/task-manage/task-manage.layout.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
 <ng-template #projectTroller>
-  <tui-breadcrumbs>
+  <tui-breadcrumbs class="project-menu">
     <a *tuiItem tuiLink> {{ 'Project' }} </a>
     <a *tuiItem tuiLink>
       <mix-project-select
