feat(): update to new db app

--- a/libs/mix-share/src/modules/database/database.layout.html
+++ b/libs/mix-share/src/modules/database/database.layout.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
 <ng-template #contextCtrl>
-  <tui-breadcrumbs>
+  <tui-breadcrumbs class="database-menu">
     <a *tuiItem tuiLink> {{ 'Context(s)' }} </a>
     <a *tuiItem tuiLink>
       <mix-db-context-select
