feat(): update performance table

--- a/libs/mix-share/src/modules/database/database.layout.html
+++ b/libs/mix-share/src/modules/database/database.layout.html
@@ -2,7 +2,7 @@
 
 <ng-template #contextCtrl>
   <tui-breadcrumbs class="database-menu">
-    <a *tuiItem tuiLink> {{ 'Context(s)' }} </a>
+    <a *tuiItem tuiLink> {{ 'Context' }} </a>
     <a *tuiItem tuiLink>
       <mix-db-context-select
         [size]="'s'"
