feat(): fix package name

--- a/libs/mix-share/src/modules/database/database.layout.html
+++ b/libs/mix-share/src/modules/database/database.layout.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
 <ng-template #contextCtrl>
-  <tui-breadcrumbs class="database-menu shadow-md">
+  <tui-breadcrumbs class="database-menu shadow">
     <a *tuiItem tuiLink> {{ 'Context' }} </a>
     <a *tuiItem tuiLink>
       <mix-db-context-select
