feat(): temp update 4ps

--- a/apps/mix-database/src/index.html
+++ b/apps/mix-database/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DataVerse | Universal Database</title>
+    <title>4P's Back Office</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
